--- a/html/contact.html
+++ b/html/contact.html
@@ -94,28 +94,28 @@
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
         <meta name="theme-color" content="#ffffff" />
         <!-- Reset.css -->
-        <link rel="stylesheet" href="./assets/css/reset.css" />
+        <link rel="stylesheet" href="../assets/css/reset.css" />
         <!-- Styles.css -->
-        <link rel="stylesheet" href="./assets/css/styles.css" />
+        <link rel="stylesheet" href="../assets/css/styles.css" />
         <!-- Responsive -->
-        <link rel="stylesheet" href="./assets/css/responsive.css" />
+        <link rel="stylesheet" href="../assets/css/responsive.css" />
         <!-- Contact.css -->
-        <link rel="stylesheet" href="./assets/css/contact.css" />
+        <link rel="stylesheet" href="../assets/css/contact.css" />
         <!-- Script -->
-        <script defer src="./script.js"></script>
+        <script defer src="../script.js"></script>
         <title>An home</title>
     </head>
     <body class="body">
         <header class="header">
             <div class="container">
                 <nav class="header__wrapper">
-                    <a class="header__link-logo" href="index.html">
+                    <a class="header__link-logo" href="../index.html">
                         Anhome Group
                     </a>
 
                     <ul id="navbar" class="navbar show-on-pc">
                         <li class="header__item">
-                            <a href="./index.html" class="header__link"
+                            <a href="../index.html" class="header__link"
                                 >Trang chủ</a
                             >
                         </li>
@@ -127,7 +127,7 @@
                         </li>
 
                         <li class="header__item">
-                            <a href="./contact.html" class="header__link active"
+                            <a href="#" class="header__link active"
                                 >Liên hệ</a
                             >
                         </li>
@@ -313,7 +313,7 @@
                         <h3 class="footer__title">THÔNG TIN LIÊN HỆ</h3>
                         <img
                             class="logo"
-                            src="./assets/icons/logo.png"
+                            src="../assets/icons/logo.png"
                             alt=""
                         />
                         <div class="footer__info">
