--- a/html/work.html
+++ b/html/work.html
@@ -94,35 +94,35 @@
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
         <meta name="theme-color" content="#ffffff" />
         <!-- Reset.css -->
-        <link rel="stylesheet" href="./assets/css/reset.css" />
+        <link rel="stylesheet" href="../assets/css/reset.css" />
         <!-- Styles.css -->
-        <link rel="stylesheet" href="./assets/css/styles.css" />
+        <link rel="stylesheet" href="../assets/css/styles.css" />
         <!-- Responsive -->
-        <link rel="stylesheet" href="./assets/css/responsive.css" />
+        <link rel="stylesheet" href="../assets/css/responsive.css" />
         <!-- work.css -->
-        <link rel="stylesheet" href="./assets/css/work.css" />
+        <link rel="stylesheet" href="../assets/css/work.css" />
         <!-- Script -->
-        <script defer src="./script.js"></script>
-        <script defer src="./work.js"></script>
+        <script defer src="../script.js"></script>
+        <script defer src="../work.js"></script>
         <title>An home</title>
     </head>
     <body class="body">
         <header class="header">
             <div class="container">
                 <nav class="header__wrapper">
-                    <a class="header__link-logo" href="index.html">
+                    <a class="header__link-logo" href="../index.html">
                         Anhome Group
                     </a>
 
                     <ul id="navbar" class="navbar show-on-pc">
                         <li class="header__item">
-                            <a href="./index.html" class="header__link">Trang chủ</a>
+                            <a href="../index.html" class="header__link"
+                                >Trang chủ</a
+                            >
                         </li>
 
                         <li class="header__item">
-                            <a href="#turtorial" class="header__link"
-                                >Thông tin</a
-                            >
+                            <a href="#!" class="header__link">Thông tin</a>
                         </li>
 
                         <li class="header__item">
@@ -132,7 +132,7 @@
                         </li>
 
                         <li class="header__item">
-                            <a href="#!" class="header__link active"
+                            <a href="./work.html" class="header__link active"
                                 >Tuyển dụng</a
                             >
                         </li>
@@ -669,7 +669,7 @@
                         <h3 class="footer__title">THÔNG TIN LIÊN HỆ</h3>
                         <img
                             class="logo"
-                            src="./assets/icons/logo.png"
+                            src="../assets/icons/logo.png"
                             alt=""
                         />
                         <div class="footer__info">
