--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <header class="header">
             <div class="container">
                 <nav class="header__wrapper">
-                    <a class="header__link-logo" href="index.html">
+                    <a class="header__link-logo" href="./index.html">
                         Anhome Group
                     </a>
 
@@ -123,11 +123,15 @@
                         </li>
 
                         <li class="header__item">
-                            <a href="./contact.html" class="header__link">Liên hệ</a>
+                            <a href="./html/contact.html" class="header__link"
+                                >Liên hệ</a
+                            >
                         </li>
 
                         <li class="header__item">
-                            <a href="./work.html" class="header__link">Tuyển dụng</a>
+                            <a href="./html/work.html" class="header__link"
+                                >Tuyển dụng</a
+                            >
                         </li>
 
                         <li class="header__item">
@@ -283,7 +287,7 @@
                     </div>
 
                     <div class="room__list">
-                        <a href="./room.html" class="room__link">
+                        <a href="./html/room.html" class="room__link">
                             <article class="room__item">
                                 <figure class="room__item-img-wrap">
                                     <img
@@ -328,7 +332,7 @@
                             </article>
                         </a>
 
-                        <a href="./room.html" class="room__link">
+                        <a href="./html/room.html" class="room__link">
                             <article class="room__item">
                                 <figure class="room__item-img-wrap">
                                     <img
@@ -373,7 +377,7 @@
                             </article>
                         </a>
 
-                        <a href="./room.html" class="room__link">
+                        <a href="./html/room.html" class="room__link">
                             <article class="room__item">
                                 <figure class="room__item-img-wrap">
                                     <img
@@ -418,7 +422,7 @@
                             </article>
                         </a>
 
-                        <a href="./room.html" class="room__link">
+                        <a href="./html/room.html" class="room__link">
                             <article class="room__item">
                                 <figure class="room__item-img-wrap">
                                     <img
@@ -463,7 +467,7 @@
                             </article>
                         </a>
 
-                        <a href="./room.html" class="room__link">
+                        <a href="./html/room.html" class="room__link">
                             <article class="room__item">
                                 <figure class="room__item-img-wrap">
                                     <img
@@ -508,7 +512,7 @@
                             </article>
                         </a>
 
-                        <a href="./room.html" class="room__link">
+                        <a href="./html/room.html" class="room__link">
                             <article class="room__item">
                                 <figure class="room__item-img-wrap">
                                     <img
@@ -553,7 +557,7 @@
                             </article>
                         </a>
 
-                        <a href="./room.html" class="room__link">
+                        <a href="./html/room.html" class="room__link">
                             <article class="room__item">
                                 <figure class="room__item-img-wrap">
                                     <img
@@ -598,7 +602,7 @@
                             </article>
                         </a>
 
-                        <a href="./room.html" class="room__link">
+                        <a href="./html/room.html" class="room__link">
                             <article class="room__item">
                                 <figure class="room__item-img-wrap">
                                     <img
@@ -643,7 +647,7 @@
                             </article>
                         </a>
 
-                        <a href="./room.html" class="room__link">
+                        <a href="./html/room.html" class="room__link">
                             <article class="room__item">
                                 <figure class="room__item-img-wrap">
                                     <img
@@ -688,7 +692,7 @@
                             </article>
                         </a>
 
-                        <a href="./room.html" class="room__link">
+                        <a href="./html/room.html" class="room__link">
                             <article class="room__item">
                                 <figure class="room__item-img-wrap">
                                     <img
@@ -733,7 +737,7 @@
                             </article>
                         </a>
 
-                        <a href="./room.html" class="room__link">
+                        <a href="./html/room.html" class="room__link">
                             <article class="room__item">
                                 <figure class="room__item-img-wrap">
                                     <img
@@ -778,7 +782,7 @@
                             </article>
                         </a>
 
-                        <a href="./room.html" class="room__link">
+                        <a href="./html/room.html" class="room__link">
                             <article class="room__item">
                                 <figure class="room__item-img-wrap">
                                     <img
